changed header and banner

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <script src="script.js"></script>
     <header>
-      <div calss= about me>
+      <div class="navigation">
         <h1> Saki Ota </h1>
         <nav>
-          <h3>about</h3>
+          <a href="aboutme">About</a>
           <h3>projects</h3>
           <h3>certificate</h3>
           <h3>blog</h3>
@@ -20,23 +20,25 @@
        
       </div>
     </header>
+    <body>
 
-    <main>
-      <div calss= about me>
+     <main>
+      <div id="aboutme">
         <h2> About Me </h2>
           <p>My name is Saki. I am from Okinawa Japan and I currently live in Melbourne Australia. I worked in education for 4 years in total before I started learning to code. My jounery to be a software engineer began in June 2021.  </p>
           <p>Linked in profile</P>
       </div>
-      <div class= project>
+      <div id="projects">
         <h2> Projects <h2>
       </div>
-      <div class=certificate>
+      <div id="certificate">
         <h2> Certificates </h2>
       </div>
-      <div class=blog>
+      <div id="blog">
         <h2>Blog</h2>
       </div>
-    </main>
+     </main>
+    </body>
 
     <footer>
       <div class=contact>
@@ -44,6 +46,7 @@
         <p>email: saki.ota01@outlook.com</p>
         <p>phone: </p>
       </div>
+    </body>
     </footer>
   </body>
 </html>
