--- a/index.html
+++ b/index.html
@@ -10,28 +10,37 @@
     <script src="script.js"></script>
     <header>
       <div class="navigation">
-        <h1> Saki Ota </h1>
+        <h1 class="topname"> Saki Ota </h1>
         <nav>
-          <a href="aboutme">About</a>
-          <h3>projects</h3>
-          <h3>certificate</h3>
-          <h3>blog</h3>
+          <a href="#aboutme">About</a>
+          <a href="#skills">Skills</a>
+          <a href="#projects">Projects</a>
+          <a href="#certificates">Certificates</a>
+          <a href="#blog">Blog</a>
         </nav>
        
       </div>
     </header>
     <body>
+      <div class="banner">
+          <img src="./toppicture.jpg" alt="top picture"></img>
+          <p>Hi my name is Saki Ota. I am learning code to be a software enginner</p>
+      </div>
 
      <main>
       <div id="aboutme">
         <h2> About Me </h2>
-          <p>My name is Saki. I am from Okinawa Japan and I currently live in Melbourne Australia. I worked in education for 4 years in total before I started learning to code. My jounery to be a software engineer began in June 2021.  </p>
+          <p>My name is Saki from Melbourne Australia. I worked in education for 4 years in total before I started learning to code.</p>
+          <p>My jounery to be a software engineer began in June 2021.  I am currently studying full-stack software engineering course with Academy Xi.</p>
           <p>Linked in profile</P>
+      </div>
+      <div id="skills">
+          <h2>Skills</h2>
       </div>
       <div id="projects">
         <h2> Projects <h2>
       </div>
-      <div id="certificate">
+      <div id="certificates">
         <h2> Certificates </h2>
       </div>
       <div id="blog">
