--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
      <main>
       <div id="aboutme">
         <h2> About Me </h2>
-          <p>My name is Saki from Melbourne Australia. I worked in education for 4 years in total before I started learning to code.</p>
-          <p>My jounery to be a software engineer began in June 2021.  I am currently studying full-stack software engineering course with Academy Xi.</p>
-          <p>Linked in profile</P>
+        <img src="./profilepic.jpeg" alt="Profile picture"></img>
+    
+          <p>My name is Saki from Melbourne Australia. I worked in education for 4 years in total before I started learning to code. 
+             <br>My jounery to be a software engineer began in June 2021.  I am currently studying full-stack software engineering course with Academy Xi.
+             <br> When I become a certified full-stack software engineer, I will seek a full-time position as a front-end engineer where I can apply my knowledge and skills for continuous improvement.
+             <br>
+             <br><span><a href="https://www.linkedin.com/in/saki-ota-27070714a/?originalSubdomain=au">Linkedin Profile</a></span>
+            </p>
+             
       </div>
+
       <div id="skills">
           <h2>Skills</h2>
       </div>
