add skills and projects

--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
 
       <div id="skills">
           <h2>Skills</h2>
+          
+            <img src="./html.png" alt="HTML">
+            <img src="./css-2.png" alt="CSS">
+            <img src="./github.png" alt="octcat">
       </div>
       <div id="projects">
         <h2> Projects <h2>
+         <p>More projects coming soon ...</p>
       </div>
       <div id="certificates">
         <h2> Certificates </h2>
