changed certificate img layout

--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
         <h2> Projects <h2>
          <p>More projects coming soon ...</p>
       </div>
-      <div id="certificates">
-        <h2> Certificates </h2>
-        <img src="./htmlcert.png">
-        <img src='./csscert.png'>
-        <img src='./gitcert.png'>
+      <section id="certificates">
+        <div id="certificates-header">
+          <h2> Certificates </h2>
+        </div>
+        <div id="certificates-img">
+          <img src="./htmlcert.png">
+          <img src='./csscert.png'>
+          <img src='./gitcert.png'>
+        </div>
+      </section>
+  
       </div>
 
       <div id="contact">
